--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,4 @@
-# MailFlow - Development Docker Compose
+# Mailflow - Development Docker Compose
 # For development with hot-reload and debugging
 
 version: '3.8'
@@ -30,7 +30,7 @@ services:
       - NODE_ENV=development
       - MAILFLOW_DATA_DIR=/app/data/.mailflow
       - VITE_API_BASE_URL=http://localhost:3001/api
-      - VITE_APP_NAME=MailFlow Dev
+      - VITE_APP_NAME=Mailflow Dev
       - VITE_APP_VERSION=1.0.0-dev
     command: npm run dev
     networks:
