--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# MailFlow - Production Docker Compose
+# Mailflow - Production Docker Compose
 # Self-hosted email client with persistent data storage
 
 version: '3.8'
@@ -21,7 +21,7 @@ services:
       - MAILFLOW_DATA_DIR=/app/data/.mailflow
       # Override API base URL for production
       - VITE_API_BASE_URL=/api
-      - VITE_APP_NAME=MailFlow
+      - VITE_APP_NAME=Mailflow
       - VITE_APP_VERSION=1.0.0
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/api/health"]
