--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/express": "^4.17.21",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
@@ -67,6 +68,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "jsdom": "^26.1.0",
     "nodemon": "^3.0.2",
+    "supertest": "^7.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
