--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/mailparser": "^3.4.6",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^6.4.17",
+    "@types/pg": "^8.15.4",
     "@types/sqlite3": "^5.1.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -42,6 +43,7 @@
     "mailparser": "^3.7.3",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "simple-parser": "^0.0.0",
